# phase1_3dgs_wildlife

./: .gitignore  README.md  pyproject.toml
docs/: ALGORITHMS.md  DATASET_DANNCE_MM1.md  DECISIONS.md  PROGRESS.md  SETUP.md
scripts/: calibrate_intrinsics.py  calibrate_rig.py  inspect_dannce_mm1.py  load_dannce_mm1.py  setup_dannce_mm1.py
src/calibration/: extrinsics.py  intrinsics.py
src/io_utils/: dannce_loader.py  dataset.py
src/sync/: alignment.py
tests/: test_dannce_loader.py  test_dannce_smoke.py  test_dataset.py  test_extrinsics.py  test_intrinsics.py  test_smoke.py
