[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "phase1-3dgs-wildlife"
version = "0.1.0"
description = "Multi-view wildlife 3D reconstruction pipeline for biometric re-identification"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "opencv-python",
    "opencv-contrib-python",
    "scipy",
    "matplotlib",
    "pillow",
    "tqdm",
    "pyyaml",
    "open3d",
    "pycolmap",
    "torch",
    "torchvision",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--no-cov -m 'not dataset'"
markers = [
    "dataset: tests that require the real DANNCE dataset on disk (deselected by default; run with -m dataset to opt in)",
]
